--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -24,9 +24,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFykIswIXIhH",
-        "outputId": "3cafde9b-de3b-4341-b67f-80b2bb4bcf30"
+        "outputId": "89d30886-d54f-4c43-cfd7-e68c7f75fba1"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -44,7 +44,7 @@
         "  print(\"hellow world\")\n",
         "  print(\"python\")\n",
         "\n",
-        "print(\"starting\")\n",
+        "print(\"starting point\")\n",
         "fun()\n",
         "print(\"end\")"
       ],
@@ -53,15 +53,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kxon0j7NXQv7",
-        "outputId": "1e2b5bde-6340-4277-d663-819bf5d76b9d"
+        "outputId": "14c5d95d-c15e-4cd2-e8a4-d6152e6fb096"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "starting\n",
+            "starting point\n",
             "hellow world\n",
             "python\n",
             "end\n"
@@ -85,7 +85,7 @@
         "id": "0iiKLxlOX9XQ",
         "outputId": "1077ed72-20b1-4ea2-f3d8-03ffa157c185"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         "id": "IILVTKfQZOep",
         "outputId": "4ca0eed5-cb60-4a4e-9e25-92b9e25580c4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "z4kCFLCTaYu6",
         "outputId": "d0d23518-1e21-4e98-b889-6dd4b9b5ebe5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "id": "nPxba1taa9oP",
         "outputId": "40ce1d48-bdd1-4da8-aefb-33c1e930e5ae"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
         "id": "gGkg3CMYc3Lj",
         "outputId": "26a9b8ee-1443-4d0d-fd29-7352ba7ff90f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "LPJ_S81YfWLK",
         "outputId": "706c93e0-7429-4863-c704-34224df5c0db"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
         "id": "faS_KRPfiFfY",
         "outputId": "684fc79c-14cb-4413-aac0-5d46ca46d67f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
         "id": "B3AUefnyi0HQ",
         "outputId": "7b0a65ce-1c9a-4afd-d490-9dadb330232d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +374,7 @@
         "id": "96PzXj70mJoe",
         "outputId": "782216dc-5819-4cb9-b4c0-41afa2b00e02"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -408,7 +408,7 @@
         "id": "vM5jeMrpm5ei",
         "outputId": "6e847683-7f5b-4029-edf7-3c9e5de55bd6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
         "id": "lp2QDItIoai4",
         "outputId": "57dc85a9-e504-45e3-d797-9ff21cda2ceb"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +466,7 @@
         "id": "gH_4a4Fin1ha",
         "outputId": "ba1fa337-5597-4627-c5cc-6661423a072b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
         "id": "EOINNxm2oEdK",
         "outputId": "ca8f1ce0-94e9-447e-e611-c18151387a82"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
