--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shwetamse/pythontraining/blob/main/Python_functions_day1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"Hellow world\")"
@@ -24,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFykIswIXIhH",
-        "outputId": "89d30886-d54f-4c43-cfd7-e68c7f75fba1"
+        "outputId": "c5b94370-665f-42cd-db1e-44fcfb54af7f"
       },
       "execution_count": 1,
       "outputs": [
@@ -33,6 +44,29 @@
           "name": "stdout",
           "text": [
             "Hellow world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Shweta Tamse')"
+      ],
+      "metadata": {
+        "id": "zHL89wZOm3H2",
+        "outputId": "e35e2dce-ddad-4f8d-a7d4-49f0e51df858",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shweta Tamse\n"
           ]
         }
       ]
@@ -55,7 +89,7 @@
         "id": "kxon0j7NXQv7",
         "outputId": "14c5d95d-c15e-4cd2-e8a4-d6152e6fb096"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
