--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -37,7 +37,7 @@
         "id": "SFykIswIXIhH",
         "outputId": "c5b94370-665f-42cd-db1e-44fcfb54af7f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,22 +51,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Shweta Tamse')"
+        "print('Shweta Tamse new')"
       ],
       "metadata": {
         "id": "zHL89wZOm3H2",
-        "outputId": "e35e2dce-ddad-4f8d-a7d4-49f0e51df858",
+        "outputId": "053371b2-097d-4047-d085-2858468ca994",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shweta Tamse\n"
+            "Shweta Tamse new\n"
           ]
         }
       ]
